[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/UserInterface/Network_setup/Network_setup.gd" type="Script" id=2]
[ext_resource path="res://scenes/ColorPicker/ColorPicker.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/icons/arrow.svg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 92
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 52
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.305882, 0.305882, 0.305882, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.733333, 0.733333, 0.733333, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=6]
size = 52
font_data = ExtResource( 4 )

[node name="Network_setup" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 47.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Create_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.393
anchor_top = 0.216
anchor_right = 0.607
anchor_bottom = 0.317
margin_left = -0.936035
margin_top = -0.0240173
margin_right = 0.935913
margin_bottom = 0.687012
focus_neighbour_bottom = NodePath("../Join_server")
focus_next = NodePath("../Join_server")
custom_fonts/font = SubResource( 1 )
text = "Create server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.393
anchor_top = 0.397
anchor_right = 0.607
anchor_bottom = 0.5
margin_left = -0.936035
margin_top = -0.433044
margin_right = 0.935913
margin_bottom = -2.5
focus_neighbour_top = NodePath("../Create_server")
focus_neighbour_bottom = NodePath("../server_ip")
focus_next = NodePath("../server_ip")
custom_fonts/font = SubResource( 1 )
text = "Join server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_ip" type="LineEdit" parent="Multiplayer_configure"]
margin_left = 1018.0
margin_top = 803.0
margin_right = 1530.0
margin_bottom = 859.0
focus_neighbour_top = NodePath("../Join_server")
focus_neighbour_bottom = NodePath("../server_port")
focus_next = NodePath("../server_port")
custom_fonts/font = SubResource( 4 )
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="Hint" type="Label" parent="Multiplayer_configure/server_ip"]
anchor_left = 0.25
anchor_top = -0.946
anchor_right = 0.75
anchor_bottom = 0.179
margin_top = -0.103996
margin_right = -3.05176e-05
margin_bottom = -0.104
custom_fonts/font = SubResource( 5 )
text = "SERVER IP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_port" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.425
anchor_top = 0.691
anchor_right = 0.575
anchor_bottom = 0.746
margin_left = -0.599976
margin_top = 0.200928
margin_right = 0.599854
margin_bottom = -0.194092
focus_neighbour_top = NodePath("../server_ip")
custom_fonts/font = SubResource( 4 )
text = "4444"
align = 1
placeholder_text = "SERVER PORT"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="Multiplayer_configure/server_port"]
anchor_left = 0.229
anchor_top = -0.868
anchor_right = 0.771
anchor_bottom = -0.039
margin_left = 0.0639954
margin_top = -0.0319977
margin_right = -0.0640259
margin_bottom = -0.036
custom_fonts/font = SubResource( 5 )
text = "SERVER PORT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" parent="Multiplayer_configure" instance=ExtResource( 3 )]
margin_left = 2269.0
margin_top = 1374.0
margin_right = 2812.4
margin_bottom = 1464.88
rect_rotation = -90.0

[node name="Label" type="Label" parent="Multiplayer_configure/ColorPicker"]
anchor_left = 1.029
anchor_top = -0.559
anchor_right = 1.089
anchor_bottom = 1.678
margin_left = -140.71
margin_top = 139.968
margin_right = 139.89
margin_bottom = -141.051
rect_rotation = 90.0
rect_pivot_offset = Vector2( 170, 30 )
custom_fonts/font = SubResource( 3 )
text = "pick our snake color"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -78.0
margin_right = 640.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionTimeout" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Error" type="Panel" parent="."]
visible = false
margin_left = 312.0
margin_top = 240.0
margin_right = 952.0
margin_bottom = 496.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Error"]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -96.0
margin_right = 176.0
text = "CONNECTION FAILED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 20.0
margin_top = 1277.0
margin_right = 140.0
margin_bottom = 1390.0
icon = ExtResource( 5 )
expand_icon = true

[node name="Hint" type="Label" parent="Back"]
anchor_top = -0.575
anchor_right = 0.967
anchor_bottom = -0.018
margin_top = -0.0249939
margin_right = -0.0400085
margin_bottom = 0.0340002
custom_fonts/font = SubResource( 6 )
text = "BACK"
align = 1

[connection signal="pressed" from="Multiplayer_configure/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Join_server" to="." method="_on_Join_server_pressed"]
[connection signal="value_changed" from="Multiplayer_configure/ColorPicker" to="." method="_on_SnakeColor_value_changed"]
[connection signal="timeout" from="ConnectionTimeout" to="." method="_on_ConnectionTimeout_timeout"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
